# challeng_r

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  credentials.json.cpt  docker-compose.yaml  pyproject.toml  requirements.txt  run.sh
db_scripts/: init.sql
src/: __init__.py  database.py  email_manage.py  files.py  forms.py  users.py
