[tool.poetry]
name = "challeng-r"
version = "0.1.0"
description = ""
authors = ["Diego Restrepo <drestrepo@fluidattacks.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.95.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
mysql-connector-python = "^8.1.0"
oauth2client = "^4.1.3"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
drive-m = "src:main"
